fix(sidemenu): css overflow fix

--- a/src/components/sidemenu/index.scss
+++ b/src/components/sidemenu/index.scss
@@ -36,7 +36,7 @@
     display: inline-block;
     position: relative;
     width: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
